--- a/skypilot/yamls/gpt2_finetuning.yaml
+++ b/skypilot/yamls/gpt2_finetuning.yaml
@@ -1,5 +1,5 @@
 resources:
-  accelerators: T4:1  # 1x NVIDIA V100 GPU
+  accelerators: T4:1  # 1x NVIDIA T4 GPU
 
 num_nodes: 1  # Number of VMs to launch
 
@@ -10,18 +10,19 @@ workdir: .
 # Commands to be run before executing the job.
 # Typical use: pip install -r requirements.txt, git clone, etc.
 setup: |
+  docker pull mosaicml/composer
+  docker run -it --name composer mosaicml/composer:latest
   sudo apt update
   sudo apt upgrade
-  sudo apt install texlive texlive-full imagemagick
-  sudo locale-gen en_US.UTF-8
-  python -m venv llmfoundry-venv
+  pip3 install --upgrade pip
+  python3 -m venv llmfoundry-venv
   source llmfoundry-venv/bin/activate
-  python3 -m pip install --upgrade pip
-  pip install -e ".[gpu]"
-  pip install mosaicml
+  pip install llm-foundry
+  git clone https://github.com/mosaicml/llm-foundry.git
+
 
 # Commands to run as a job.
 # Typical use: launch the main program.
 run: |
-  cd scripts/train
+  cd llm-foundry/scripts/train
   composer train.py finetune_example/gpt2-arc-easy.yaml
