testing mpt7b traning on gpu

--- a/scripts/train/finetune_example/mpt-7b-arc-easy--gpu.yaml
+++ b/scripts/train/finetune_example/mpt-7b-arc-easy--gpu.yaml
@@ -9,6 +9,7 @@ model:
   name: hf_causal_lm
   pretrained_model_name_or_path: mosaicml/mpt-7b
   pretrained: true  # false: only use the architecture; true: initialize with pretrained weights
+  init_device: meta
   config_overrides:
     attn_config:
       attn_impl: triton
