--- a/skypilot/yamls/mpt7b_finetuning.yaml
+++ b/skypilot/yamls/mpt7b_finetuning.yaml
@@ -1,5 +1,5 @@
 resources:
-  accelerators: T4:1  # 1x NVIDIA T4 GPU
+  accelerators: V100:1  # 1x NVIDIA T4 GPU
 
 num_nodes: 1  # Number of VMs to launch
 
@@ -17,8 +17,7 @@ setup: |
   python3 -m venv llmfoundry-venv
   pip install --upgrade pip
   source llmfoundry-venv/bin/activate
-  pip install llm-foundry
-  pip install peft
+  pip install -e ".[gpu]"
   git clone https://github.com/mosaicml/llm-foundry.git
   nvcc --version
 
