--- a/skypilot/yamls/test.yaml
+++ b/skypilot/yamls/test.yaml
@@ -1,5 +1,5 @@
 resources:
-  accelerators: T4:1  # 1x NVIDIA V100 GPU
+  accelerators: V100:1  # 1x NVIDIA V100 GPU
 
 num_nodes: 1  # Number of VMs to launch
 
